--- a/SpotTheScam/Staff/Staff.Master
+++ b/SpotTheScam/Staff/Staff.Master
@@ -83,10 +83,14 @@
                         <asp:PlaceHolder ID="phNavOptions" runat="server" Visible="false">
                             <li class="nav-item"><a class="nav-link" href="StaffDashboard.aspx">Dashboard</a></li>
                             <li class="nav-item"><a class="nav-link" href="ManageUsers.aspx">Manage Users</a></li>
+                            <asp:PlaceHolder ID="phManageStaff" runat="server" Visible="false">
+                                <li class="nav-item"><a class="nav-link" href="ManageStaff.aspx">Manage Staff</a></li>
+                            </asp:PlaceHolder>
                             <li class="nav-item"><a class="nav-link" href="ManageBlog.aspx">Manage Blog</a></li>
                             <li class="nav-item"><a class="nav-link" href="StaffVideoCall.aspx">Staff Video Call</a></li>
                             <li class="nav-item"><a class="nav-link" href="StaffManageSessions.aspx">Manage Sessions</a></li>
                             <li class="nav-item"><a class="nav-link" href="ViewModules.aspx">Modules</a></li>
+                            <li class="nav-item"><a class="nav-link" href="TrendAnalytics.aspx">Trend Radar</a></li>
                             <li class="nav-item"><a class="nav-link btn btn-sm btn-danger text-white ms-2" href="StaffLogout.aspx">Logout</a></li>
                         </asp:PlaceHolder>
                     </ul>
